--- a/src_site/css_dev/sass/default.scss
+++ b/src_site/css_dev/sass/default.scss
@@ -34,6 +34,7 @@ $solarized-green:     #859900;
 @import url('https://fonts.googleapis.com/css?family=Alegreya&display=swap&subset=cyrillic,greek,latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Fira+Code:400,500,600&display=swap&subset=latin-ext');
 // @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css');
 
 // 1. Global
 // ---------
