--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -21,6 +21,7 @@
         <h4>Links</h4>
         <ul>
             <li><a href="//push2kindle-154021.appspot.com/">KindleEar</a></li>
+            <li><a href="//runalyze.com/athlete/dasistmiregal">Runalyze</a></li>
             <!--<li><a href="/n/">Blog</a></li>-->
             <li><a href="/s/links/">Some Links</a></li>
             <!--<li><a href="/s/tools/">Tools</a></li>-->
