--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -3,7 +3,7 @@
     <head>
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-61795702-1"></script>
+<script async src="//www.googletagmanager.com/gtag/js?id=UA-61795702-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments)};
@@ -17,8 +17,10 @@
         <title>$title$</title>
         <meta name="title" content="$title$">
         <link rel="stylesheet" href="/css/default.css" />
-        
-        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+
+        <script defer src="//use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+        <link rel="stylesheet"
+              href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/solarized-light.min.css">
         $if(MathJax)$$MathJax$$endif$
     </head>
     <body>
