--- a/src_site/templates/finalize.html
+++ b/src_site/templates/finalize.html
@@ -3,22 +3,24 @@
 <div class="show-for-medium">
 <a href="https://github.com/haoyun/haoyun.github.io/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 </div>
--->
 <script src="//static.getclicky.com/js"></script>
 <script>try{ clicky.init(101019144); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101019144ns.gif" /></p></noscript>
+<noscript><p><img alt="Clicky" width="1" height="1"
+  src="//in.getclicky.com/101019144ns.gif" /></p></noscript>
+-->
 
 <!-- JavaScript -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
+<script src="//code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+crossorigin="anonymous"></script>
 <script src="/js/app.js"></script>
 <script>
+    hljs.configure({
+      languages: [] // Turn-off autodetection
+    })
     hljs.initHighlightingOnLoad();
-    $$(document).foundation();
+    //$$(document).foundation();
 </script>
 $if(livejs)$
 <script src="/js/live.js"></script>
